<resources>
    <string name="app_name">Indications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">SignOut</string>
    <string name="action_settings">Settings</string>
    <string name="account_info">Account Info</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="about_us">About</string>
    <string name="general">General</string>
    <string name="logout">Logout?</string>

    <!--Settings activity strings-->
    <string name="theme_summary">Change the theme of the app</string>
    <string name="theme_dialog">Select app theme</string>
    <string name="select_theme">Select theme</string>
    <string name="text_summary">Change text size in news detail page</string>
    <string name="text_size">Text Size</string>
    <string name="settings_select_text">Select text size</string>
    <string name="settings_save_data">Download images?</string>
    <string name="settings_download_summary">Download images from the internet?</string>
    <string name="settings_look_and_feel">Look and feel</string>
    <string name="settings_general">General</string>

    <!-- Text size options-->
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_large">Large</string>

    <!--keys for settings-->
    <string name="image_download_key">image_download</string>
    <string name="theme_key">app_theme</string>
    <string name="text_key">text_size</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- Theme options-->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="search">Search</string>
    <string name="more_options">More Options</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="share">Share with a friend</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="nav_drawer_title">General</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="login_request">Please Login!</string>

    <string name="email_error">Enter Email</string>
    <string name="password_error">Enter Password</string>
    <string name="name_error">Enter Name</string>
    <string name="new_password_enter_error">Enter new Password</string>
    <string name="empty_email_error">Enter Email</string>

    <string name="toast_registration_success">Successfully Registered.</string>
    <string name="toast_signup_failure">Sign up failed.</string>
    <string name="toast_verification_email_sent">Sign up failed.</string>
    <string name="toast_signin_failure">Authentication failed.</string>
    <string name="toast_signin_success">Success</string>
    <string name="toast_signin_again_request">Please Sign in again</string>
    <string name="toast_password_change_success">Password Successfully Changed</string>
    <string name="toast_empty_email">\"Enter Email\"</string>
    <string name="toast_password_reset_email">Password reset email sent</string>
    <string name="hi">Hi There!</string>
    <string name="register_progress_dialog_title">Please wait &#8230; </string>
    <string name="register_progress_dialog_message">Registering new user</string>
    <string name="desc">ImageView</string>
    <string name="save_for_later">Save for Later?</string>
    <string name="url">Open in Web?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open_in_map">Open location in map?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_hint">user123@xyz.com</string>
    <string name="password_hint">Input Password</string>
    <string name="login_page">Back to login</string>
    <string name="username_hint">Username</string>
    <string name="todo">TODO</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_user">New User? Sign Up.</string>
    <string name="logging_in">Logging in user</string>

    <string name="long_text">Copyright 2014 Manabu Shimobe

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="error_connection">You\'re Offline </string>
    <string name="connection_restore">Go Online</string>
    <string name="welcome">Welcome!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_maps">Map</string>
    <string name="social_feed">Social Feed</string>
</resources>
