<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:defaultValue="true"
    android:enabled="true">

    <PreferenceCategory android:title="@string/settings_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/image_download_key"
            android:summary="@string/settings_download_summary"
            android:title="@string/settings_save_data" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_look_and_feel">

        <ListPreference
            android:defaultValue="@string/theme_light"
            android:dialogTitle="@string/theme_dialog"
            android:enabled="true"
            android:entries="@array/theme"
            android:entryValues="@array/theme"
            android:key="@string/theme_key"
            android:summary="@string/theme_summary"
            android:title="@string/select_theme" />

    </PreferenceCategory>
</PreferenceScreen>

