<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/signin_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10sp"
        android:src="@drawable/place_holder" />

    <TextView
        android:id="@+id/signinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black_1"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInEmailFieldLayout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:keyboardNavigationCluster="true"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInPassFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInPassField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/password_hint"
            android:longClickable="false"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/btn_gradient_blue"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <!-- Link to Login Screen -->

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/forgot_pass"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="10sp"
        android:background="@color/greyColor" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/new_user"
        android:textAllCaps="false"
        android:textSize="12sp" />

</LinearLayout>
